partman (20) UNRELEASED; urgency=low

  * Translations (autofill with l10n-changes script)

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 13:29:12 +0100

partman (19) unstable; urgency=low

  * Joey Hess
    - Remove map_devfs, use mapdevfs from di-utils-mapdevfs instead.

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Mar 2004 19:29:12 -0500

partman (18) unstable; urgency=low

  * Joey Hess
    - Remove autogenerated postrm.
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by Christian Perrier
    - Hungarian (hu.po) by VERÓK István
    - Italian (it.po) by Stefano Canepa
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Bokmal, Norwegian (nb.po) by Axel Bojer, Knut Yrvin
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrisor
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Albanian (sq.po) by Elian Myftiu
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Mar 2004 19:25:02 -0500

partman (17) unstable; urgency=low

  * Sven Luther
    - added file system type for chrp, chrp_rs6k and chrp_pegasos.

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - French (fr.po) by Christian Perrier
    - Norwegian (nb.po) by Knut Yrvin
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Sven Luther <luther@debian.org>  Mon,  8 Mar 2004 12:14:40 +0100

partman (16) unstable; urgency=low

  * Updated translations: 
    - bg.po (Bulgarian) by Ognyan Kulev
    - cs.po (Czech) by Miroslav Kure