@@ -1,8 +1,13 @@
 partman (20) UNRELEASED; urgency=low
 
   * Translations (autofill with l10n-changes script)
+  * Anton Zinoviev
+    - parted_server.c: return the corect path to the "partition" in a device
+      with partition table "loop".  Otherwise it is not possible to create
+      filesystems in logical volumes of LVM and it is not possible to
+      mount them.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 13:29:12 +0100
+ -- Anton Zinoviev <zinoviev@debian.org>  Tue,  9 Mar 2004 17:51:32 +0200
 
 partman (19) unstable; urgency=low
 
